<resources>
    <string name="app_name">Attendance MAP</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>

    //pasta

    <string name="pastaIngredients">Pasta
\nCream Cheese
\nParmesan Cheese
\nOlive Oil
\nGarlic
\nSalt Pepper</string>
    <string name="pastaDesc">Cook your pasta until al dente
\nSaute’ garlic in olive oil until fragrant
\nAdd cream cheese, pasta cooking water, parmesan, and stir well
\nDrain and add pasta to the skillet
\nToss until well combined, adding some pasta water if needed</string>

    //maggi

    <string name="maggiIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>

    <string name="maggieDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //cake

    <string name="cakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="cakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //pancake

    <string name="pancakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pancakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //pizza

    <string name="pizzaIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pizzaDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //burgers

    <string name="burgerIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="burgerDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //fries

    <string name="friesIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="friesDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    <string name="sv_class">Mobile Application Programming</string>
    <string name="school">Electrical and Electronics School</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="add_image">Add Image</string>
    <string name="resgister_student">Resgister Student</string>
    <string name="sign_in">Sign In</string>
    <string name="mssv">MSSV</string>
    <string name="accept">Accept</string>
    <string name="title">"Time is really the only capital that any human being has, and the only thing he can\'t afford to lose."</string>
    <string name="thomas_edison">- Thomas Edison.</string>
    <string name="continue_btn">Continue</string>\
    <string name="titleIntroPage">Education is for all</string>
    <string name="subTitleIntroPage">Learning never exhausts the mind</string>
    <string name="alreadyAccount">Already have an account? Login</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="create_account_with_email">Create Account with Email</string>
    <string name="create_account">Create Account</string>
    <string name="your_email">Your email:</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password_editText">Password</string>
    <string name="settingTitle">Settings</string>
    <string name="setting_content">Change language, sign out account...</string>
    <string name="notify">Notification</string>
    <string name="receive_notify">Receive notification of previous class schedule</string>
    <string name="languageSelector">Language</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="link_has_been_sent">Reset password link has been sent to your registered Email</string>
    <string name="register_student">Register Student</string>
    <string name="show_password">Show password</string>


    <!--change language-->
    <string name="change_language_title">Language</string>

    <!--untranslatable-->
    <string name="language_english" translatable="false">English</string>
    <string name="language_japanese" translatable="false">日本の</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>

    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_japanese</item>
        <item>@string/language_vietnamese</item>
    </string-array>

    <string name="language_english_code" translatable="false">en</string>
    <string name="language_japanese_code" translatable="false">ja</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="home">Home</string>
    <string name="scan_qr">Scan QR</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="list_student">Class information</string>
    <string name="class_txt">Class</string>
    <string name="attendance_txt">Attendance</string>
    <string name="statistics_txt">Statistics</string>

    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_japanese_code</item>
        <item>@string/language_vietnamese_code</item>
    </string-array>


</resources>