<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/btnBack"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_width="30dp"
        android:padding="10dp"
        android:layout_height="30dp"
        android:background="@drawable/baseline_arrow_back"/>


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_below="@+id/btnBack"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account_with_email"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/title_color"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="18sp"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="51dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:layout_below="@+id/titleEmail"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_et_bg"
        android:drawableStart="@drawable/base_email"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/example_email_com"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/titlePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:layout_below="@+id/signUpEmail"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:layout_below="@+id/titlePassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_et_bg"
        android:drawableStart="@drawable/ic_lock"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/password_editText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/signUpPassword"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/create_account"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/alreadyAccount"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/btn_color"/>
</RelativeLayout>