<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".IntroActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIntro"
        android:text="@string/thomas_edison"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_marginEnd="40dp"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="302dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/continue_btn"
        android:background="@drawable/rounded_button"/>

</RelativeLayout>