<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_color"
    tools:context=".Activity.MainActivity_Student">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingTitle"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>

    <ImageView
        android:layout_width="142dp"
        android:layout_height="142dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/wrench_screwdriver"
        android:layout_marginTop="68dp"/>

    <ImageView
        android:id="@+id/bellIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="280dp"
        android:src="@drawable/bell"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/notify"
        android:layout_marginStart="74dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="30dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/language"
        android:layout_marginTop="330dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="334dp"
        android:layout_marginStart="72dp"
        android:textSize="20sp"
        android:text="@string/languageSelector"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/buttonChangeLanguage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/flag_us"
        android:layout_below="@+id/switchNotify"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"/>


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logout"
        android:layout_marginTop="400dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/btn_LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="404dp"
        android:layout_marginStart="80dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

</RelativeLayout>